--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "daisyui": "^2.38.0",
     "date-fns": "^2.29.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recharts": "^2.1.16"
+    "recharts": "^2.1.16",
+    "vite-plugin-svgr": "^2.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.6",
