--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ dist
 dist-ssr
 *.local
 
+# Cypress
+cypress/screenshots
+cypress/videos
+
 # Coverage directory used by tools like istanbul
 coverage
 *.lcov
