--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview",
     "test": "vitest",
     "coverage": "vitest run --coverage",
+    "e2e": "start-server-and-test 'pnpm build && pnpm preview' http://localhost:4173/ 'cypress open'",
+    "e2e:silent": "start-server-and-test 'pnpm build && pnpm preview' http://localhost:4173/ 'cypress run'",
     "pre-commit": "tsc && eslint --config .eslintrc.cjs --max-warnings=0 && prettier ./src --write && pnpm coverage",
     "prepare": "husky install"
   },
@@ -24,6 +26,7 @@
   "devDependencies": {
     "@babel/core": "^7.19.6",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "@testing-library/cypress": "^8.0.3",
     "@testing-library/dom": "^8.19.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -37,6 +40,8 @@
     "@vitest/coverage-c8": "^0.23.4",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^8.2.5",
+    "cypress": "^10.11.0",
+    "cypress-vite": "^1.2.1",
     "eslint": "^8.26.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -51,10 +56,12 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.0",
     "jsdom": "^20.0.2",
+    "path": "^0.12.7",
     "postcss": "^8.4.18",
     "postcss-nested": "^5.0.6",
     "prettier": "^2.7.1",
     "require-from-string": "^2.0.2",
+    "start-server-and-test": "^1.14.0",
     "tailwindcss": "^3.2.1",
     "tsc-files": "^1.1.3",
     "typescript": "^4.8.4",
