--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "e2e": "start-server-and-test 'pnpm build && pnpm preview' http://localhost:4173/ 'cypress open'",
     "e2e:silent": "start-server-and-test 'pnpm build && pnpm preview' http://localhost:4173/ 'cypress run'",
     "pre-commit": "tsc && eslint --config .eslintrc.cjs --max-warnings=0 && prettier ./src --write && pnpm coverage",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build -o ./dist/storybook"
   },
   "dependencies": {
     "daisyui": "^2.38.0",
@@ -25,6 +27,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.6",
+    "@storybook/addon-essentials": "^7.0.0-alpha.48",
+    "@storybook/addon-interactions": "^7.0.0-alpha.48",
+    "@storybook/addon-links": "^7.0.0-alpha.48",
+    "@storybook/react": "^7.0.0-alpha.48",
+    "@storybook/react-vite": "^7.0.0-alpha.48",
+    "@storybook/testing-library": "^0.0.13",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@testing-library/cypress": "^8.0.3",
     "@testing-library/dom": "^8.19.0",
@@ -54,6 +62,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.7",
     "husky": "^8.0.0",
     "jsdom": "^20.0.2",
     "path": "^0.12.7",
@@ -62,6 +71,7 @@
     "prettier": "^2.7.1",
     "require-from-string": "^2.0.2",
     "start-server-and-test": "^1.14.0",
+    "storybook": "^7.0.0-alpha.48",
     "tailwindcss": "^3.2.1",
     "tsc-files": "^1.1.3",
     "typescript": "^4.8.4",
