--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ node_modules
 dist
 dist-ssr
 *.local
+*.prod
 
 # Cypress
 cypress/screenshots
@@ -17,6 +18,7 @@ coverage
 # production
 /build
 /public
+/storybook
 
 # Editor directories and files
 .vscode/*
