--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "start": "vite --open",
     "build": "tsc && vite build",
+    "build:gh-pages": "vite build --outDir docs --base /currency-converter/",
     "preview": "vite preview",
     "test": "vitest",
     "coverage": "vitest run --coverage",
     "e2e": "start-server-and-test 'pnpm build && pnpm preview' http://localhost:4173/ 'cypress open'",
     "e2e:silent": "start-server-and-test 'pnpm build && pnpm preview' http://localhost:4173/ 'cypress run'",
-    "pre-commit": "tsc && eslint --config .eslintrc.cjs --max-warnings=0 && prettier ./src --write && pnpm coverage",
+    "pre-commit": "tsc && eslint --config .eslintrc.cjs --max-warnings=0 && prettier ./src --write && pnpm coverage && pnpm build:gh-pages",
     "prepare": "husky install",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build -o ./storybook",
